--- a/assets/images/LDA Interactive Topics - Party.html
+++ b/assets/images/LDA Interactive Topics - Party.html
@@ -39,3 +39,32 @@ if(typeof(LDAvis) !== "undefined"){
          });
 }
 </script>
+
+<style>
+    /* Force the LDA visualization to fit within the iframe's width and height */
+    #lda_vis {
+        width: 100% !important;
+        height: 100% !important;
+        max-width: 100% !important;
+        max-height: 100% !important;
+    }
+
+    /* Adjust the individual components inside the visualization */
+    .py-ldavis {
+        width: 100% !important;
+        height: 100% !important;
+        display: block;
+        margin: 0 auto;
+    }
+
+    /* Ensure that internal components are flexible and scale */
+    .topic-term {
+        width: 100% !important;
+        height: 100% !important;
+    }
+
+    .js-plotly-plot {
+        width: 100% !important;
+        height: 100% !important;
+    }
+</style>
